--- a/portofolio photography.html
+++ b/portofolio photography.html
@@ -11,15 +11,13 @@
 <!-- Navbar -->
 <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50">
   <nav class="container mx-auto flex justify-between items-center py-4 px-6 max-w-6xl">
-    <!-- Logo -->
     <div class="flex items-center space-x-3">
-      <img src="freepik__logo-for-cinta-coding-team-in-graffiti-art-featuri__68313-removebg-preview.png" 
-           alt="Logo" class="h-10 w-10 object-contain">
+      <img src="freepik__logo-for-cinta-coding-team-in-graffiti-art-featuri__68313-removebg-preview.png" alt="Logo" class="h-10 w-10 object-contain">
       <h1 class="text-2xl font-bold text-teal-700">Cinta Coding Photography</h1>
     </div>
 
-    <!-- Menu (Desktop) -->
-    <ul id="menu" class="hidden md:flex space-x-6 text-gray-700 font-medium">
+    <!-- Menu Desktop -->
+    <ul class="hidden md:flex space-x-6 text-gray-700 font-medium">
       <li><a href="#home" class="hover:text-teal-600">Beranda</a></li>
       <li><a href="#about" class="hover:text-teal-600">Tentang</a></li>
       <li><a href="#portfolio" class="hover:text-teal-600">Portfolio</a></li>
@@ -27,13 +25,13 @@
       <li><a href="#contact" class="hover:text-teal-600">Kontak</a></li>
     </ul>
 
-    <!-- Hamburger Button -->
+    <!-- Tombol Hamburger (Mobile) -->
     <button id="hamburger" class="md:hidden text-3xl text-gray-700 focus:outline-none">
       ☰
     </button>
   </nav>
 
-  <!-- Mobile Menu -->
+  <!-- Menu Mobile -->
   <div id="mobileMenu" class="hidden md:hidden bg-white shadow-md">
     <ul class="flex flex-col space-y-4 p-6 text-gray-700 font-medium">
       <li><a href="#home" class="hover:text-teal-600">Beranda</a></li>
@@ -45,40 +43,50 @@
   </div>
 </header>
 
-<!-- Hero Section -->
-<section id="home" class="relative h-screen flex items-center justify-center text-center bg-gray-900">
-  <img src="jawa.jpg" alt="Hero Background" class="absolute inset-0 w-full h-full object-cover" />
-  <div class="absolute inset-0 bg-black bg-opacity-50 backdrop-blur-sm"></div>
-  <div class="relative z-10 px-6 max-w-3xl">
-    <h1 class="text-5xl md:text-7xl font-bold text-white leading-tight">Abadikan Momen Terbaik Anda</h1>
-    <p class="mt-6 text-lg md:text-xl text-gray-200 leading-relaxed">Fotografi profesional dengan sentuhan budaya Indonesia.</p>
-    <a href="#portfolio" 
-       class="mt-8 inline-block bg-teal-600 text-white px-6 py-3 rounded-full text-lg font-medium shadow-lg hover:bg-teal-700 transition">
-      Lihat Portfolio
-    </a>
-  </div>
-</section>
+  <!-- Hero Section -->
+  <section id="home" class="relative h-screen flex items-center justify-center text-center bg-gray-900">
+    <img src="jawa.jpg" 
+         alt="Hero Background" 
+         class="absolute inset-0 w-full h-full object-cover" />
+    <div class="absolute inset-0 bg-black bg-opacity-50 backdrop-blur-sm"></div>
+    <div class="relative z-10 px-6 max-w-3xl">
+      <h1 class="text-5xl md:text-7xl font-bold text-white leading-tight">Abadikan Momen Terbaik Anda</h1>
+      <p class="mt-6 text-lg md:text-xl text-gray-200 leading-relaxed">Fotografi profesional dengan sentuhan budaya Indonesia.</p>
+      <a href="#portfolio" 
+         class="mt-8 inline-block bg-teal-600 text-white px-6 py-3 rounded-full text-lg font-medium shadow-lg hover:bg-teal-700 transition">
+        Lihat Portfolio
+      </a>
+    </div>
+  </section>
 
-<!-- About Section -->
+  <!-- About Section -->
 <section id="about" class="py-20 md:py-28 bg-white">
   <div class="container mx-auto px-6 max-w-6xl text-center">
     <h2 class="text-3xl md:text-5xl font-bold text-gray-800 mb-6">Tentang Kami</h2>
     <p class="text-gray-600 leading-loose max-w-3xl mx-auto">
-      Cinta Coding Photography adalah studio fotografi yang lahir dari semangat untuk menghadirkan karya visual
-      yang bukan hanya indah dipandang, tetapi juga penuh makna. Kami percaya bahwa setiap momen, sekecil apa pun itu, 
-      memiliki cerita yang patut diabadikan...
+      Cinta Coding Photography adalah studio fotografi ...
     </p>
   </div>
 </section>
 
-<!-- Portfolio, Pricing, Contact, Maps, Footer (tetap sama punyamu) -->
+  <!-- Portfolio Section -->
+  <!-- (isi portfoliomu tetap sama) -->
 
-<!-- Footer -->
-<footer class="bg-gray-900 text-gray-300 py-6 text-center">
-  <p>&copy; Cinta Coding Photography. Semua Hak Dilindungi.</p>
-</footer>
+<!-- Pricing Section -->
+<!-- (isi pricing tetap sama) -->
 
-<!-- Script toggle menu -->
+  <!-- Contact Section -->
+  <!-- (isi kontak tetap sama) -->
+
+      <!-- Alamat -->
+      <!-- (isi alamat + maps tetap sama) -->
+
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-gray-300 py-6 text-center">
+    <p>&copy; Cinta Coding Photography. Semua Hak Dilindungi.</p>
+  </footer>
+
+<!-- Script Toggle -->
 <script>
   const hamburger = document.getElementById("hamburger");
   const mobileMenu = document.getElementById("mobileMenu");
