--- a/portofolio photography.html
+++ b/portofolio photography.html
@@ -88,20 +88,31 @@
     </div>
   </section>
 
-  <!-- Portfolio Section -->
-  <section id="portfolio" class="py-20 bg-gray-50">
-    <div class="container mx-auto px-6 max-w-6xl text-center">
-      <h2 class="text-3xl md:text-5xl font-bold text-gray-800 mb-12">Portfolio</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-        <img src="foto1.jpg" alt="Portfolio 1" class="rounded-xl shadow-md hover:scale-105 transition">
-        <img src="foto2.jpg" alt="Portfolio 2" class="rounded-xl shadow-md hover:scale-105 transition">
-        <img src="foto3.jpg" alt="Portfolio 3" class="rounded-xl shadow-md hover:scale-105 transition">
-        <img src="foto4.jpg" alt="Portfolio 4" class="rounded-xl shadow-md hover:scale-105 transition">
-        <img src="foto5.jpg" alt="Portfolio 5" class="rounded-xl shadow-md hover:scale-105 transition">
-        <img src="foto6.jpg" alt="Portfolio 6" class="rounded-xl shadow-md hover:scale-105 transition">
-      </div>
-    </div>
-  </section>
+   <!-- Portfolio Section -->
+  <section id="portfolio" class="py-20 md:py-28 bg-gray-100">
+    <div class="container mx-auto px-6 max-w-6xl">
+      <h2 class="text-3xl md:text-5xl font-bold text-center text-gray-800 mb-12">Portfolio Kami</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+
+        <!-- Wedding -->
+        <div class="bg-white rounded-xl shadow-md overflow-hidden hover:scale-105 transition-transform">
+          <div class="aspect-[4/3]">
+            <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/3e2b9bf7-652e-40d8-be2d-e50afd1c9968.png" 
+                 alt="Pasangan Pengantin di Pantai Bali" 
+                 class="w-full h-full object-cover" />
+          </div>
+          <div class="p-6">
+            <h3 class="text-2xl font-bold text-teal-700 mb-2">Wedding & Prewedding</h3>
+            <p class="text-gray-600 leading-relaxed">Abadikan hari spesial Anda dengan fotografi romantis ala Indonesia.</p>
+          </div>
+        </div>
+
+        <!-- Portrait -->
+        <div class="bg-white rounded-xl shadow-md overflow-hidden hover:scale-105 transition-transform">
+          <div class="aspect-[4/3]">
+            <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6cbdb09b-c578-4014-a464-8292b6348d34.png" 
+                 alt="Potret Wanita dengan Makeup Jawa" 
+                 class="w-full h-full object-cover" />
 
   <!-- Pricing Section -->
   <section id="pricing" class="py-20 bg-white">
