--- a/portofolio photography.html
+++ b/portofolio photography.html
@@ -71,24 +71,12 @@
     <div class="container mx-auto px-6 max-w-6xl text-center">
       <h2 class="text-3xl md:text-5xl font-bold text-gray-800 mb-6">Tentang Kami</h2>
       <p class="text-gray-600 leading-loose max-w-3xl mx-auto">
-        Cinta Coding Photography adalah studio fotografi yang lahir dari semangat untuk menghadirkan karya visual
-        yang bukan hanya indah dipandang, tetapi juga penuh makna. Kami percaya bahwa setiap momen, sekecil apa pun itu, 
-        memiliki cerita yang patut diabadikan. Dengan sentuhan budaya Indonesia yang kaya akan warna dan tradisi, 
-        kami berusaha menghadirkan karya yang mampu menyatukan nuansa modern dan kearifan lokal.
-        <br><br>
-        Tim kami terdiri dari fotografer profesional yang berpengalaman dalam berbagai jenis pemotretan, mulai dari
-        pernikahan, prewedding, acara keluarga, hingga portrait personal. Kami selalu berkomitmen memberikan hasil terbaik
-        dengan pendekatan personal, sehingga setiap foto tidak hanya sekadar dokumentasi, melainkan juga menjadi kenangan
-        yang hidup kembali setiap kali Anda melihatnya.
-        <br><br>
-        Dengan dukungan peralatan modern, kreativitas tanpa batas, serta dedikasi tinggi, kami siap membantu Anda
-        mengabadikan momen berharga dengan kualitas terbaik. Karena bagi kami, fotografi bukan hanya pekerjaan, 
-        melainkan sebuah seni untuk merangkai cerita dalam bentuk visual yang abadi.
+        Cinta Coding Photography adalah studio fotografi ...
       </p>
     </div>
   </section>
 
-   <!-- Portfolio Section -->
+  <!-- Portfolio Section -->
   <section id="portfolio" class="py-20 md:py-28 bg-gray-100">
     <div class="container mx-auto px-6 max-w-6xl">
       <h2 class="text-3xl md:text-5xl font-bold text-center text-gray-800 mb-12">Portfolio Kami</h2>
@@ -97,7 +85,7 @@
         <!-- Wedding -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden hover:scale-105 transition-transform">
           <div class="aspect-[4/3]">
-            <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/3e2b9bf7-652e-40d8-be2d-e50afd1c9968.png" 
+            <img src="https://storage.googleapis.com/.../image1.png" 
                  alt="Pasangan Pengantin di Pantai Bali" 
                  class="w-full h-full object-cover" />
           </div>
@@ -110,60 +98,33 @@
         <!-- Portrait -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden hover:scale-105 transition-transform">
           <div class="aspect-[4/3]">
-            <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6cbdb09b-c578-4014-a464-8292b6348d34.png" 
+            <img src="https://storage.googleapis.com/.../image2.png" 
                  alt="Potret Wanita dengan Makeup Jawa" 
                  class="w-full h-full object-cover" />
+          </div>
+          <div class="p-6">
+            <h3 class="text-2xl font-bold text-teal-700 mb-2">Portrait</h3>
+            <p class="text-gray-600 leading-relaxed">Potret pribadi dengan nuansa budaya dan modern.</p>
+          </div>
+        </div>
+
+        <!-- Tambah kategori lain jika perlu -->
+
+      </div>
+    </div>
+  </section>
 
   <!-- Pricing Section -->
   <section id="pricing" class="py-20 bg-white">
     <div class="container mx-auto px-6 max-w-6xl text-center">
       <h2 class="text-3xl md:text-5xl font-bold text-gray-800 mb-12">Paket Harga</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        
         <!-- Paket Basic -->
-        <div class="bg-gray-100 p-8 rounded-xl shadow-md hover:shadow-xl transition">
-          <h3 class="text-2xl font-bold text-teal-700 mb-4">Basic</h3>
-          <p class="text-4xl font-bold text-gray-800 mb-6">Rp1.000.000</p>
-          <ul class="text-gray-600 mb-6 space-y-2">
-            <li>✔ 2 Jam pemotretan</li>
-            <li>✔ 20 Foto editing profesional</li>
-            <li>✔ Semua file mentah</li>
-          </ul>
-          <a href="#contact" class="bg-teal-600 text-white px-6 py-3 rounded-full shadow hover:bg-teal-700 transition">
-            Pesan Sekarang
-          </a>
-        </div>
-
+        <div class="bg-gray-100 p-8 rounded-xl shadow-md hover:shadow-xl transition">...</div>
         <!-- Paket Standard -->
-        <div class="bg-gray-100 p-8 rounded-xl shadow-md hover:shadow-xl transition">
-          <h3 class="text-2xl font-bold text-teal-700 mb-4">Standard</h3>
-          <p class="text-4xl font-bold text-gray-800 mb-6">Rp2.500.000</p>
-          <ul class="text-gray-600 mb-6 space-y-2">
-            <li>✔ 5 Jam pemotretan</li>
-            <li>✔ 50 Foto editing profesional</li>
-            <li>✔ Semua file mentah</li>
-            <li>✔ Album cetak</li>
-          </ul>
-          <a href="#contact" class="bg-teal-600 text-white px-6 py-3 rounded-full shadow hover:bg-teal-700 transition">
-            Pesan Sekarang
-          </a>
-        </div>
-
+        <div class="bg-gray-100 p-8 rounded-xl shadow-md hover:shadow-xl transition">...</div>
         <!-- Paket Premium -->
-        <div class="bg-gray-100 p-8 rounded-xl shadow-md hover:shadow-xl transition">
-          <h3 class="text-2xl font-bold text-teal-700 mb-4">Premium</h3>
-          <p class="text-4xl font-bold text-gray-800 mb-6">Rp5.000.000</p>
-          <ul class="text-gray-600 mb-6 space-y-2">
-            <li>✔ Sehari penuh pemotretan</li>
-            <li>✔ 100+ Foto editing profesional</li>
-            <li>✔ Semua file mentah</li>
-            <li>✔ Album cetak + Bingkai</li>
-            <li>✔ Video dokumentasi</li>
-          </ul>
-          <a href="#contact" class="bg-teal-600 text-white px-6 py-3 rounded-full shadow hover:bg-teal-700 transition">
-            Pesan Sekarang
-          </a>
-        </div>
+        <div class="bg-gray-100 p-8 rounded-xl shadow-md hover:shadow-xl transition">...</div>
       </div>
     </div>
   </section>
@@ -190,15 +151,7 @@
       Jl. Perjuangan No.10B, Karyamulya, Kec. Kesambi, Kota Cirebon, Jawa Barat 45135
     </p>
     <div class="mx-auto w-full max-w-md h-64 rounded-xl overflow-hidden shadow-md">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.158021237468!2d108.53447337499641!3d-6.989613493007771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6ee2a735aaaaab%3A0xf7a9b8e3e9cf2d94!2sJl.%20Perjuangan%20No.10B%2C%20Karyamulya%2C%20Kec.%20Kesambi%2C%20Kota%20Cirebon%2C%20Jawa%20Barat%2045135!5e0!3m2!1sid!2sid!4v1693564050000!5m2!1sid!2sid" 
-        width="100%" 
-        height="100%" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy"></iframe>
     </div>
   </div>
 
@@ -211,7 +164,6 @@
   <script>
     const hamburger = document.getElementById("hamburger");
     const mobileMenu = document.getElementById("mobileMenu");
-
     hamburger.addEventListener("click", () => {
       mobileMenu.classList.toggle("hidden");
     });
